Index hbs & js - modified - WIP

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -63,25 +63,29 @@
 
       <div class="row">
 
+        {{#each products}}
+
         <div class="col-md-3">
 
           <div class="card" style="width: 18rem;">
 
-            <img src="https://images.unsplash.com/photo-1512054502232-10a0a035d672?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80" class="card-img-top" alt="...">
+            <img src="{{this.image}}" class="card-img-top" alt="...">
 
             <div class="card-body">
 
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">{{this.name}}</h5>
 
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">{{this.description}}</p>
 
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Add to cart</a>
 
             </div>
 
           </div>
 
         </div>
+
+        {{/each}}
 
       </div>
 
