--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -13,7 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>{{title}}</title>
 
 
 </head>
@@ -24,12 +24,15 @@
 
 <body>
 
+{{!-- Code to determine which header file to choose according to the user type --}}
   {{#if admin}}
   {{>admin-header}}
   {{else}}
   {{>user-header}}
   {{/if}}
 
+
+  {{!-- HBS Code to inject body of the requested page --}}
   {{{body}}}
 
   <!-- Bootstrap Bundle with Popper -->
