Added new folder for Admin in VIEWS & configured products table, Modified Admin and User Partials,Added id to products Array in Admin and user.js

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -8,17 +8,17 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Shopping - Cart - User</a>
+            <a class="navbar-brand" href="#">Shopping - Cart</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Carts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="#">Orders</a>
                     </li>
                 </ul>
                 <form class="d-flex">
