--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,4 +1,4 @@
-  {{!-- ==============================HEADER - NAVBAR============================== --}}
+  {{!-- ==============================Admin HEADER - NAVBAR============================== --}}
   <header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -7,17 +7,17 @@
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Shopping - Cart</a>
+        <a class="navbar-brand" href="#">Admin Panel</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/admin/products">All Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="#">All Orders</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#">All Users</a>
             </li>
           </ul>
           <form class="d-flex">
