Views-Admin--Add product - WIP

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -2,9 +2,15 @@
 
     <div class="container">
 
+        <div class="row mt-4 justify-content-end">
+
+            <a href="/admin/add-product" class="col-md-2 btn btn-success">Add Product</a>
+
+        </div>
+
         {{!-- ====================TABLE==================== --}}
 
-        <table class="table">
+        <table class="table mt-4">
 
             {{!-- ==========Table Header========== --}}
 
