Minor bug fix - Fixed a redirect in admin navbar item All products & added a handlebar condition in app.js for rendering the admin page

--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/admin/products">All Products</a>
+              <a class="nav-link active" aria-current="page" href="/admin" method="get" >All Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">All Orders</a>
