Added collections.js to config folder, Modified product-helpers and added getAllProducts function, Modified Admin.js to fetch and display data from DB using getAllProducts function, Modified View Products to match with the data supplied from DB, Modified Add products for accepting number in product id and configured a counter there itself

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -3,8 +3,10 @@
     <h1>Add Product</h1>
     <form id="add-product-form" action="/admin/add-product" method="post" enctype="multipart/form-data">
       <div class="form-group">
-        <label for="id">ID:</label>
-        <input type="text" class="form-control" id="id" name="id" required>
+        <label for="price">Product Id:</label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="id" name="id" min="0" step="1" required>
+        </div>
       </div>
       <div class="form-group">
         <label for="name">Name:</label>
