--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -39,7 +39,7 @@
                     <td>{{this.category}}</td>
                     <td>{{this.description}}</td>
                     <td>{{this.price}}</td>
-                    <td><img style="width: 50px; height: 50px;" src="{{this.image}}" alt="{{this.name}}"></td>
+                    <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
                 </tr>
 
                 {{/each}}
