Configured the database connection to index and admin page - Added 7 Products with Price and details including image

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th scope="col">Product Id</th>
-                    <th scope="col">Data Base Id</th>
+                    <th scope="col">Database Id</th>
                     <th scope="col">Product</th>
                     <th scope="col">Category</th>
                     <th scope="col">Description</th>
