--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,13 +12,15 @@
 
         <div class="card" style="width: 18rem;">
 
-          <img src="{{this.image}}" class="card-img-top" alt="...">
+          <img src="/product-images/{{this._id}}.jpg" class="card-img-top" alt="{{this.name}}">
 
           <div class="card-body">
 
             <h5 class="card-title">{{this.name}}</h5>
 
             <p class="card-text">{{this.description}}</p>
+
+            <p class="card-text"> ₹ {{this.price}}</p>
 
             <a href="#" class="btn btn-primary">Add to cart</a>
 
