Deleted index.hbs file - Added new hbs file for product views in user folder - Style Modification in the user product view page

--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -8,11 +8,11 @@
 
       {{#each products}}
 
-      <div class="col-md-3">
+      <div class="col-md-3 p-3">
 
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 15rem; height: 23rem;">
 
-          <img src="/product-images/{{this._id}}.jpg" class="card-img-top" alt="{{this.name}}">
+          <img src="/product-images/{{this._id}}.jpg" class="card-img-top" alt="{{this.name}}" style="height:10rem; width:12.5rem;">
 
           <div class="card-body">
 
