Added user login/signup form, added route to the same and added that root in user header dropdown

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -21,11 +21,14 @@
                         <a class="nav-link" href="#">Orders</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" data-bs-target="#navbarTogglerDemo03" aria-haspopup="true" aria-expanded="false">Account</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="/login">Log In</a>
+                    </div>
+                </div>
             </div>
+        </div>
         </div>
     </nav>
 
