Added user login/signup form, added route to the same and added that root in user header dropdown

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,4 +1,4 @@
-{{!-- ==============================HEADER - NAVBAR============================== --}}
+{{!-- ==============================USER HEADER - NAVBAR============================== --}}
 
 <header>
 
