--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -14,11 +14,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Products</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">Cart</a>
+                    </li>
 
                     {{#if user}}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cart</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Orders</a>
                     </li>
