--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -41,7 +41,7 @@
                     <td>{{this.price}}</td>
                     <td><img style="width: 50px; height: 50px" src="/product-images/{{this._id}}.jpg" alt="{{this.name}}"></td>
                     <td>
-                        <a href="/admin/edit-product" class="btn btn-primary">Edit</a>
+                        <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
                         <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure that you want to delete {{this.name}} ?')">DELETE</a>
                     </td>
                 </tr>
