Added Method to preview product image in the Edit product option using DOM manipulation of Javascript

--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -31,9 +31,9 @@
       </div>
       <div class="form-group">
         <label for="image">Image:</label>
-        <img src="/product-images/{{productDetails._id}}.jpg" alt="" style="width: 100px;height:auto">
+        <img src="/product-images/{{productDetails._id}}.jpg" alt="" style="width: 100px;height:auto" id="imageView" class="pt-3">
         <div class="custom-file">
-          <input type="file" class="custom-file-input" id="image" name="image" accept="image/*">
+          <input type="file" class="custom-file-input" id="image" name="image" accept="image/*" onchange="displayImage(event)">
           <label class="custom-file-label" for="image">Choose file</label>
         </div>
         <div id="image-preview" class="mt-2"></div>
@@ -44,6 +44,18 @@
     </form>
   </div>
 </section>
+
+
+{{!-- Javascript Function to Display new image selected in the page instead of Existing Image --}}
+<script>
+
+  function displayImage(event){
+
+    document.getElementById('imageView').src = URL.createObjectURL(event.target.files[0])
+
+  }
+
+</script>
 
 
 {{!-- <!-- Preview Modal -->
