Added new collection for user cart in the config-collections file, Modified the route of ADD to Cart button in view-products.hbs, Added addToCart function in userHelpers for adding cart document for each user in user cart collection, Added a route add-to-cart

--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -22,7 +22,7 @@
 
             <p class="card-text"> ₹ {{this.price}}</p>
 
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to cart</a>
 
           </div>
 
