--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -1,37 +1,29 @@
-<div class="container table-container">
-
-<table class="table table-hover">
-
-    <thead class="thead-light">
-
-    <tr>
-        <th>Item</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th></th>
-    </tr>
-
-    </thead>
-
-    <tbody>
-
-    {{#each cartItems}}
-
-    <tr>
-        <td><img style="width: 70px;height: 70px;" src="/product-images/{{this._id}}.jpg" alt=""></td>
-        <td>{{this.name}}</td>
-        <td>{{this.description}}</td>
-        <td>{{this.price}}</td>
-        <td><button class="cart-item-count ml-3">-</button>50<button class="cart-item-count ml-3">+</button></td>
-        <td><a href="" class="btn btn-danger">Remove Item</a></td>
-    </tr>
-
-    {{/each}}
-
-    </tbody>
-
-</table>
-
+<div style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
+    <div style="width: 80%; background-color: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
+        <h1 style="text-align: center;">Users Cart</h1>
+        <table style="width: 100%; border-collapse: collapse;">
+            <thead style="background-color: #f2f2f2;">
+                <tr>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Item</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Title</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Description</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Price</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;">Quantity</th>
+                    <th style="padding: 10px; text-align: left; border-bottom: 1px solid #ddd;"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each cartItems}}
+                <tr>
+                    <td><img style="width: 70px; height: 70px;" src="/product-images/{{this._id}}.jpg" alt=""></td>
+                    <td>{{this.name}}</td>
+                    <td>{{this.description}}</td>
+                    <td>{{this.price}}</td>
+                    <td><button style="margin-left: 3px;" class="cart-item-count">-</button>50<button style="margin-left: 3px;" class="cart-item-count">+</button></td>
+                    <td><a href="" style="background-color: #dc3545; color: #fff; padding: 5px 10px; border: none; border-radius: 4px; text-decoration: none;">Remove Item</a></td>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+    </div>
 </div>
