--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -7,7 +7,7 @@
           aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Admin Panel</a>
+        <a class="navbar-brand" href="/admin">GetMyDeal Admin Dashboard</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
