--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -8,7 +8,7 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">Shopping - Cart</a>
+            <a class="navbar-brand" href="/">GetyMyDeal</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
