Added badge alongside cart in user header

--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -12,7 +12,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart">Cart</a>
+                        <a class="nav-link" href="/cart">Cart<span class="badge badge-success">8</span></a>
                     </li>
                     {{#if user}}
                     <li class="nav-item">
@@ -48,6 +48,10 @@
     .navbar-brand:hover {
         color: #dc3545;
         font:bold
+    }
+
+    .badge {
+        color: green;
     }
 
     .btn-primary:hover {
