--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -12,7 +12,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/cart">Cart<span class="badge badge-success">8</span></a>
+                        <a class="nav-link" href="/cart">Cart{{#if user}}<span class="badge badge-success">8</span>{{/if}}</a>
                     </li>
                     {{#if user}}
                     <li class="nav-item">
