Modified Add to cart Button and added a event listener onClick, which calls addToCart function which is defined in the script file saved in public/javascripts folder and added to the layouts.hbs file and executes Ajax call to add-to-cart path with product ID, Created Ajax request in such a way that on success it will return a status back in json format with boolean value true, configured Ajax in such a way that on receiving success status from addToCart function, it'll update the cart count in user header

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -36,9 +36,13 @@
   {{{body}}}
 
   <!-- Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- Script File for Ajax -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+  <!-- Script File in Public Folder -->
+  <script src="/javascripts/script.js"></script>
 
 </body>
 
