--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -22,7 +22,7 @@
 
             <p class="card-text"> ₹ {{this.price}}</p>
 
-            <a href="/add-to-cart/{{this._id}}" class="btn btn-primary">Add to cart</a>
+            <button onclick="addToCart('{{this._id}}')" class="btn btn-primary">Add to cart</button>
 
           </div>
 
