Modified cart.hbs to make the increment and decrement buttons for each product to call a function called changeQuantity for initiating an ajax request to server, Added the function for the ajax call in the script file in public directory, Added a new api in user.js for handling the ajax call via post method, Added a function changeCartQuantity in userHelpers for incrementing or decrementing the quantity feild of product objects in user cart based on the count variable passed to the function via ajax request

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -28,9 +28,9 @@
                         {{/each}}
 
                         <td>
-                            <button class="quantity-btn minus">-</button>
+                            <button class="quantity-btn minus" onclick="changeQuantity('{{this._id}}','{{#each this.product}}{{this._id}}{{/each}}', -1)">-</button>
                             <span class="quantity">{{this.quantity}}</span>
-                            <button class="quantity-btn plus">+</button>
+                            <button class="quantity-btn plus" onclick="changeQuantity('{{this._id}}','{{#each this.product}}{{this._id}}{{/each}}', 1)">+</button>
                         </td>
                         <td><a href="#" class="remove-item">Remove</a></td>
                     </tr>
