Modified the cart.hbs and added removeProductFromCart function to remove button, Added removeProductFromCart in script.js file for getting cart Id and product Id for making Ajax call, Modified success function inside Ajax to alert the user in realtime based on the JSON response provided by api call defined in user.js (On removal of the product), Added deleteProductFromCart function in user helpers to remove the product from user cart when invoked by ajax request via api call

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -32,7 +32,7 @@
 
                         </td>
                         
-                        <td><a href="#" class="remove-item">Remove</a></td>
+                        <td><button class="quantity-btn btn-danger" onclick="removeProductFromCart('{{this._id}}','{{this.product._id}}')">Remove</button></td>
 
                     </tr>
 
