Modified the cart.hbs file and added Total amount feild and Place order button

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -40,6 +40,17 @@
 
             </tbody>
         </table>
+
+        <hr>
+
+        <div class="float-right pr-5">
+
+            <h5 class="float-center mr-5">Total Cart amount: ₹ 10 </h5>
+
+            <a href="/place-order" class="btn btn-success mt-3" style="width:100%;"><b>Place Order</b></a>
+
+        </div>
+
     </div>
 </div>
 
