Added place-orders page, Modified cart route in users.js, Modified user-helpers.js
#Added place-orders page
*Added new page for order Summary - place-orders.hbs,
#Modified cart route and added place-order route in users.js
*Modified cart route and added the function to find total cart quantity, passed the same value to cart page,
#Modified user-helpers.js
*added function to calculate the total price of products in the cart,
#Modified cart.hbs page to display total cart value

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -45,7 +45,7 @@
 
         <div class="float-right pr-5">
 
-            <h5 class="float-center mr-5">Total Cart amount: ₹ 10 </h5>
+            <h5 class="float-center mr-5">Total Cart amount: ₹ {{cartValue}} </h5>
 
             <a href="/place-order" class="btn btn-success mt-3" style="width:100%;"><b>Place Order</b></a>
 
