Added feature to display Total Order value in cart and place order page, Added new page to drender when the user cart is empty
Modified cart page and gave id to total amount for updating it via Ajax when quantity is changed and pass userId when the change quantity function is called, Modified script.js to send the userId also through Ajax for using in getCartValue function and receive totalcart value in ajax success to modify in page using ajax, Added a new route to display a page if the cart is empty and added a page for the same, Modified userHelpers.changeCartProductQuantity function to resolve an object to the /change-product-quantity page so that cartValue obtained there can be passed back to Ajax call in object format

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -24,11 +24,11 @@
                         <td>{{this.product.price}}</td>
 
                         <td>
-                            <button class="quantity-btn minus" onclick="changeQuantity('{{this._id}}','{{this.product._id}}', -1)">-</button>
+                            <button class="quantity-btn minus" onclick="changeQuantity('{{this._id}}','{{this.product._id}}', '{{../user._id}}', -1)">-</button>
 
                             <span class="quantity" id="{{this.product._id}}">{{this.quantity}}</span>
 
-                            <button class="quantity-btn plus" onclick="changeQuantity('{{this._id}}','{{this.product._id}}', 1)">+</button>
+                            <button class="quantity-btn plus" onclick="changeQuantity('{{this._id}}','{{this.product._id}}', '{{../user._id}}', 1)">+</button>
 
                         </td>
                         
@@ -45,7 +45,7 @@
 
         <div class="float-right pr-5">
 
-            <h5 class="float-center mr-5">Total Cart amount: ₹ {{cartValue}} </h5>
+            <h5 class="float-center mr-5">Total Cart amount: ₹ <span id="cart-total">{{cartValue}}</span> </h5>
 
             <a href="/place-order" class="btn btn-success mt-3" style="width:100%;"><b>Place Order</b></a>
 
