--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -3,8 +3,11 @@
     <h1 style="font-size: 24px; text-align: center;">Place Order</h1>
 
     <div style="display: flex; justify-content: space-between; margin-top: 30px;">
-        <div style="flex: 1; padding-right: 20px;">
-            <form action="submit_order.php" method="POST">
+
+        <form id="checkout-form">
+
+            <div style="flex: 1; padding-right: 20px;">
+
 
                 <h4>Delivery Details</h4>
                 <hr>
@@ -28,39 +31,44 @@
                 <label for="pin" style="font-weight: bold; display: block; margin-bottom: 5px;">Pin:</label>
                 <input type="text" id="pin" name="pin" required
                     style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 3px; margin-bottom: 15px;">
-            </form>
-        </div>
 
-        <div style="flex: 1; padding-left: 20px;">
-            <h2 style="margin-top: 0;">Order Summary</h2>
+                <input type="text" id="" name="userId" value="{{user._id}}" hidden required>
 
-            <hr>
+            </div>
 
-            {{#each cartProducts}}
-            
-            <p>{{this.product.name}} - {{this.quantity}} item</p>
+            <div style="flex: 1; padding-left: 20px;">
+                <h2 style="margin-top: 0;">Order Summary</h2>
 
-            {{/each}}
+                <hr>
 
-            <hr>
+                {{#each cartProducts}}
 
-            <p>Total Order Amount:</p>
-            <h6>{{cartValue}}</h6>
+                <p>{{this.product.name}} - {{this.quantity}} item</p>
 
-            <hr>
+                {{/each}}
 
-            <h4>Payment Methods</h4>
-            <form action="submit_payment.php" method="POST">
+                <hr>
+
+                <p>Total Order Amount:</p>
+                <h6>{{cartValue}}</h6>
+
+                <hr>
+
+                <h4>Payment Methods</h4>
+
                 <label>
-                    <input type="radio" name="payment" value="cod" required> Cash on Delivery (COD)
+                    <input type="radio" name="payment-method" value="COD" required> Cash on Delivery (COD)
                 </label>
                 <label>
-                    <input type="radio" name="payment" value="online" required> Online Payment
+                    <input type="radio" name="payment-method" value="ONLINE" required> Online Payment
                 </label>
 
                 <button type="submit"
                     style="background-color: #4CAF50; color: #fff; border: none; padding: 10px 20px; border-radius: 3px; font-size: 16px; cursor: pointer; margin-top: 20px; width: 100%;">Checkout</button>
-            </form>
-        </div>
+
+            </div>
+
+        </form>
+
     </div>
 </div>
