Added Feature to Display the Products of each placed order
Added getProductsInOrder function in userHelpers to get the details of the products in each order,
Added getOrderDate in user helpers to find the date of order,
Added a post route in user.js for handling product detaiils request from Orderd page,
Configured Ordered-product-details page, Modifies orders page to send the product details request as a post request so that order id wont be exposed in url.

--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -1,3 +1,5 @@
+{{!-- ==============================Past Orders Page============================== --}}
+
 <div style="display: flex; justify-content: center; padding-top: 40px ; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
 
     <div style="width: 95%; background-color: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
@@ -33,7 +35,11 @@
                         <td>{{this.paymentMethod}}</td>
                         <td>{{this.orderStatus}}</td>
                         
-                        <td><a href="/ordered-product-details/{{this._id}}" class="btn btn-primary animate__animated animate__fadeInLeft">View Products</a></td>
+                        <td>
+                            <form method="POST" action="/ordered-product-details">
+                                <button name="orderId" value="{{this._id}}" type="submit" class="btn btn-primary animate__animated animate__fadeInLeft">View Products</button>
+                            </form>
+                        </td>
 
                     </tr>
 
