Completed Payment Gateway Integration with server
:::Modified place-order.hbs:::
# Added an id to checkout button for calling ajax when it is clicked
# Added script file link for Razorpay payment below the form so that it will be loaded before the common script.js file in the main layout page

:::Modified user.js file:::
# Added POST route verify-payment
# Called placeOrder function in place-order post
# Called function generateRazorpayOrder inside placeOrder function for online payments
# Called verifyOnlinePayment function to verify the signature returned by the Razorpay gateway via verify-payment post route from client side
# Called updateOnlineOrderPaymentStatus function to update payment status in DB according to the result of payment verification by verifyOnlinePayment function

:::Modified script.js file:::
# Modified check-out button click event capture and initiating ajax call in post method
# Added a function makeRazorpayPayment to:
-Receive the orderData returned by the server (after processinf the order details using razorpay module functions in server) in response to the check-out request from client
-Modify the data to the format to be sent into Razorpay server
-Initiate the request to Razorpay server with the OrderData and Razorpay credentials from server
-On succesful payment, call the function verifyPayment with response from Razorpay server and order details generated in our server
# Added function verifyPayment to send the data received at the client side (from Razorpay server as response to the payment completion) to our server as post request for verifying the signature and modifying the DB data incase of successful and genuine request from client side.

:::Modified user-helpers.js:::
# Added payment gateway details by adding an object of Razorpay for using it in the functions related to payment
# Modified placeOrder function to add order data to Orders collection in DB and clear it from cart collection of user and return orders collection Id in

--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -61,7 +61,7 @@
                     <input type="radio" name="payment-method" value="ONLINE" required> Online Payment
                 </label>
 
-                <button type="submit"
+                <button type="button" id="checkout-button"
                     style="background-color: #4CAF50; color: #fff; border: none; padding: 10px 20px; border-radius: 3px; font-size: 16px; cursor: pointer; margin-top: 20px; width: 100%;">Checkout</button>
 
             </div>
@@ -70,3 +70,10 @@
 
     </div>
 </div>
+
+
+{{!-- Script for using Razorpay Payment gateway functions --}}
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+
+{{!-- Script for Ajax call for making payments when check-out button is clicked is defined in the common script.js file and hence will be loaded from there --}}
